--- a/minggu - 1/style.css
+++ b/minggu - 1/style.css
@@ -1,11 +1,24 @@
 body{
-    background-color: bisque;
-    display: flex ;
-    justify-content: center;
+    background-color: black;
+    display: grid;
+    place-items: center;
 }
 
 #myCanvas{
-    border: solid 5px;
+    border: solid 3px;
     height: 100%;
     width: 100%;
+    border-color:azure;
+}
+
+nav {
+    display: flex;
+    margin: 20px 0 20px 0;
+}
+
+nav a {
+    text-decoration: none;
+    margin:20px;
+    color: white;
+    font-weight: 600;        
 }
