--- a/FINAL/style/style.css
+++ b/FINAL/style/style.css
@@ -4,6 +4,109 @@ body {
   justify-content: center;
 }
 
+.main-nav {
+  position: absolute;
+  top: 75px;
+  right: 500px;
+  width: 80px;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  transition: top 0.5s ease, left 0.5s ease, right 0.5s ease;
+}
+
+nav .nav-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: rotate(-45deg);
+}
+.nav-content .toggle-btn,
+.nav-content span a {
+  height: 60px;
+  width: 60px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+.nav-content .toggle-btn {
+  font-size: 35px;
+  color: #0e2431;
+  z-index: 100;
+  cursor: pointer;
+  transform: rotate(45deg);
+  transition: all 0.6s ease;
+}
+nav.open .toggle-btn {
+  transform: rotate(+225deg);
+}
+.nav-content span {
+  position: absolute;
+  transition: all 0.6s ease;
+  opacity: 0;
+}
+nav.open .nav-content span {
+  transform: rotate(calc(var(--i) * (360deg / 6))) translateY(120px);
+  opacity: 1;
+}
+.nav-content span a {
+  text-decoration: none;
+  transform: rotate(45deg);
+}
+.nav-content span a i {
+  font-size: 24px;
+  color: #0e2431;
+  transform: rotate(calc(var(--i) * (360deg / -8)));
+  opacity: 0.8;
+  transition: 0.2s;
+}
+.nav-content span a:hover i {
+  opacity: 1;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  background-color: #0e2431;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  transform: translateY(-20px);
+}
+.concaveLogo {
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 50%;
+  /* Halve the circle */
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  transform: rotate(-20deg);
+}
+.convexLogo {
+  width: 20px;
+  height: 20px;
+  border: 2px solid black;
+  border-radius: 50%;
+  /* Halve the circle */
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  transform: rotate(100deg);
+}
+.nav-content span:hover .tooltip {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
 #myCanvas {
   border: solid 1px;
   height: 100%;
@@ -12,8 +115,8 @@ body {
 
   /* Grid Koordinat */
   background: #ffffff;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.10) 0.1em, transparent 0.1em),
-    linear-gradient(90deg, rgba(0, 0, 0, 0.10) 0.1em, transparent 0.1em);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0.1em, transparent 0.1em),
+    linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0.1em, transparent 0.1em);
   background-size: 2.37em 2.38em;
 }
 
@@ -29,8 +132,12 @@ body {
   -webkit-backdrop-filter: blur(2.8px);
   border: 1px solid rgba(13, 91, 255, 0.22);
 }
-.judul{
+.judul {
   position: absolute;
-  top: 0;
-  left: 46%;
+  display: grid;
+  place-items: center;
+  top: 0%;
+}
+.judul p {
+  font-size: 30px;
 }
