--- a/FINAL/style/style.css
+++ b/FINAL/style/style.css
@@ -33,61 +33,95 @@ body {
   height: 100%;
   width: 100%;
   border-color: rgb(11, 11, 11);
-
   /* Grid Koordinat */
   background: #ffffff;
   background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0.1em, transparent 0.1em),
     linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0.1em, transparent 0.1em);
-  background-size: 4.40em 4.39em;
+  background-size: 4.4em 4.39em;
 }
 
 .inputs {
+  display: flex;
+  top: 5px;
   width: 95%;
   height: 20px;
   padding: 0px;
   color: azure;
-  display: flex;
   justify-content: center;
   position: absolute;
-  top: 5px;
   background: rgba(46, 56, 64);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(2.8px);
-  -webkit-backdrop-filter: blur(2.8px);
-  border: 1px solid rgba(13, 91, 255, 0.22);
 }
 
-.inputs div {
+.inputsContainer {
+  display: flex;
+}
+
+.inputsContainer div {
   display: flex;
   justify-items: center;
   align-items: center;
   margin: 0px 10px;
 }
 
-.inputs div input {
+.inputsContainer div input {
   margin: 0px 10px;
 }
 .judul {
   position: absolute;
   display: grid;
   place-items: center;
-  top: 0%;
+  top: 0;
 }
 .judul p {
   font-size: 30px;
 }
-
+.toggleContainer {
+  display: none;
+}
 .dock {
   display: flex;
   justify-content: center;
+  position: fixed; /* Change position to fixed */
+  bottom: 0;
+  left: 0; /* Adjust left position if necessary */
+  width: 100%; /* Set the width to 100% */
+  z-index: 999; /* Set a high z-index to ensure it's above other content */
+}
+
+.MenuWithPicture {
+  display: flex;
+  justify-content: center;
   position: absolute;
-  bottom: 10px;
+}
+
+.imageContainer {
+  margin: 0px 20px;
+  padding: 10px;
+  border: solid black;
+  border-radius: 20px;
+  height: 300px;
+  width: 300px;
+}
+
+.imageContainer img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transition: object-position 3s;
+}
+
+.imageContainer img:hover {
+  object-fit: cover;
+  object-position: 0% 0%;
 }
 
 .dock div {
   background-color: azure;
+  position: sticky;
   cursor: pointer;
+  bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,4 +148,71 @@ body {
 .objectSelect option {
   background-color: rgba(46, 56, 64);
   border: none;
+}
+
+#toggleHideOpen {
+  background-color: transparent;
+  border: none;
+  color: white;
+  border-radius: 50%;
+}
+
+@media only screen and (max-width: 784px) {
+  #myCanvas {
+    width: 100%;
+    height: 100vh;
+  }
+  .MenuWithPicture {
+    display: flex;
+    flex-direction: column;
+    top: 150px;
+    margin-top: 30px;
+  }
+  .imageContainer {
+    width: 100px;
+    height: 100px;
+    margin: 10px 0px;
+  }
+  .toggleContainer {
+    display: flex;
+    justify-content: end;
+
+    width: 50px;
+    height: 50px;
+    z-index: 20;
+    padding: 10px;
+    background-color: rgba(46, 56, 64);
+    border-radius: 50%;
+    place-content: center;
+    align-items: center;
+  }
+  .inputs {
+    display: grid;
+    grid-column: 1;
+    align-content: first baseline;
+    background-color: transparent;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0px;
+  }
+  .inputsContainer {
+    display: flex;
+    background: rgba(46, 56, 64);
+    border-radius: 15px;
+    flex-direction: column;
+    place-content: center;
+    padding: 10px;
+  }
+  .inputs div {
+    margin: 2px 2px;
+  }
+  #toggleHideOpen {
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    font-size: 25px;
+    text-align: center;
+  }
 }
